// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product should handle PRODUCT_GET_MAKE 1`] = `
Object {
  "repos": Object {
    "data": Object {
      "undefined": Array [],
    },
    "message": "",
    "query": undefined,
    "status": "running",
  },
}
`;

exports[`Product should handle PRODUCT_GET_REPOS_FAILURE 1`] = `
Object {
  "repos": Object {
    "data": Object {},
    "message": "Something went wrong",
    "query": "",
    "status": "error",
  },
}
`;

exports[`Product should handle PRODUCT_GET_SUCCESS 1`] = `
Object {
  "repos": Object {
    "data": Object {
      "": Array [],
    },
    "message": "",
    "query": "",
    "status": "ready",
  },
}
`;

exports[`Product should return the initial state 1`] = `
Object {
  "repos": Object {
    "data": Object {},
    "message": "",
    "query": "",
    "status": "idle",
  },
}
`;
